[package]
name = "netconf-client"
version = "0.1.0"
authors = ["rsitko92 <robert.sitko92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.1"
serde = { version = "1.0.126", features = ["derive"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
thiserror = "1.0.26"
regex = "1.5.4"
strum = "0.21.0"
strum_macros = "0.21"

[dev-dependencies]
serial_test = "0.5.1"
bollard = "0.11.0"
tokio = { version = "1.8.1", features = ["rt", "macros"] }
futures-util = "0.3.15"
confy = "0.4.0"
lazy_static = "1.4.0"